@@ -1,0 +1,21 @@
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock {DIV} at (0,0) size 784x71 [border: (2px solid #FF0000)]
+        RenderBlock {DIV} at (14,14) size 756x43
+          RenderInline {SPAN} at (0,0) size 0x0
+          RenderBR {BR} at (0,0) size 0x28
+          RenderText {TEXT} at (0,0) size 0x0
+          RenderInline {SPAN} at (0,0) size 33x15
+            RenderText {TEXT} at (0,28) size 33x15
+              text run at (0,28) width 33: "- Ken"
+          RenderBR {BR} at (0,0) size 0x0
+          RenderText {TEXT} at (0,0) size 0x0
+          RenderInline {SPAN} at (0,0) size 0x0
+          RenderText {TEXT} at (0,0) size 0x0
+selection is CARET:
+start:      position 5 of child 1 {TEXT} of child 4 {SPAN} of child 2 {DIV} of root {DIV}
+upstream:   position 5 of child 1 {TEXT} of child 4 {SPAN} of child 2 {DIV} of root {DIV}
+downstream: position 0 of child 5 {BR} of child 2 {DIV} of root {DIV}
