@@ -1,0 +1,38 @@
+<html> 
+<head>
+
+<style>
+.editing { 
+    border: 2px solid red; 
+    padding: 12px; 
+    font-size: 24px; 
+}
+</style>
+<script src=../editing.js language="JavaScript" type="text/JavaScript" ></script>
+
+<script>
+
+function editingTest() {
+    for (i = 0; i < 20; i++)
+        moveSelectionForwardByCharacterCommand();
+}
+
+</script>
+
+<title>Editing Test</title> 
+</head> 
+<body>
+<div contenteditable id="root" class="editing">
+<DIV id="test">
+<SPAN style="font: 12.0px Lucida Grande"></SPAN><BR>
+<SPAN style="font: 12.0px Lucida Grande">- Ken</SPAN><BR>
+<SPAN style="font: 12.0px Lucida Grande"></SPAN>
+</DIV>
+</div>
+
+<script>
+runEditingTest();
+</script>
+
+</body>
+</html>
